syntax = "proto3";

// Web exposes a backend server over gRPC.
package web;

// import "github.com/johanbrandhorst/protobuf/proto/gopherjs.proto";

// Define the package locations the generated files will go into
// option (gopherjs.gopherjs_package) = "github.com/kyeett/gameserver/proto/client";
option go_package = "github.com/kyeett/gameserver/grpcserver/proto;pb";

// Backend defines the interface exposed by the backend.
// TODO: Define functionality exposed by backend.

message PlayerID {
    string ID = 1;
}


message Empty {
}

message WorldResponse {
    bytes tiles = 1;
    int32 width = 2;
    int32 height = 3;
}

message EntityResponse {
    bytes payload = 1;
}


service Backend {
    rpc NewPlayer(Empty) returns (PlayerID) {}
    // rpc PerformAction(ActionRequest) returns (ActionRequest) {}
    rpc WorldRequest(Empty) returns (WorldResponse) {}
    rpc EntityStream(Empty) returns (stream EntityResponse) {}
}


